# monitor

./: Makefile  README.md  bpytop.py  pyproject.toml  tox.ini  warden.py
.github/workflows/: testing.yml
tests/: test_classes.py  test_functions.py  test_title.py
themes/: alucard.theme
