[tool.poetry]
name = "warden"
version = "1.0.68"
description = "Resource monitor that shows usage and stats for processor, memory, disks, network and processes."
readme = "README.md"
authors = ["Aszels Sceznyk", "asceznyk@gmail.com"]
homepage = "https://github.com/asceznyk/warden"
license = "Apache-2.0"
include = ["warden-themes/*.theme"]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
pylint = "^2.6.0"
more-itertools = "^8.7.0"

[tool.poetry.scripts]
warden = "warden:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
